# compose--w-rust

./: README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/org/kudos/rustoncompose/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/kudos/rustoncompose/: MainActivity.kt
app/src/main/java/org/kudos/rustoncompose/domain/: Calculation.kt
app/src/main/java/org/kudos/rustoncompose/presentation/: MainView.kt  MainViewModel.kt
app/src/main/java/org/kudos/rustoncompose/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/org/kudos/rustoncompose/utils/: ExpensiveCalculation.kt  UiState.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/org/kudos/rustoncompose/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust-bridge/: Cargo.toml
rust-bridge/src/: lib.rs
